lab2_kubectl_version2/yaml/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: backend
  name: backend
spec:
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 3000
  selector:
    app: backend
  type: LoadBalancer
