lab2_kubectl_version2/yaml/mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: mongodb
  name: mongodb
spec:
  ports:
    - name: mongodb
      port: 27017
      targetPort: 27017
  selector:
    app: mongodb
  type: LoadBalancer
